flapivor/tests/m1/hopix/parser/bad/08-lexer-all-id-1.hopix
val `wrong` = 0
val `fine = 0
val fine = 0